# vref_walkability_index

./: README.md  Red_híbrida (1).ipynb  pyproject.toml
demo/: 01_PL_Tessellation_network.ipynb  02_PV_Land_use.ipynb  03_BT_Perception_variables.ipynb  04_WI_Walkability_Index.ipynb
notebooks/: 01_PL_01_Manzanas_zonas.ipynb  01_PL_02_Boeing_network.ipynb  01_PL_03_Tessellation_network.ipynb  01_PL_03_Tessellations_network.ipynb  01_PL_03a_Function_network_from_tessellation.ipynb  01_PL_03b_Tessellations_network_territories.ipynb  01_PL_03b_create_tessellations_network.ipynb  01_PL_04_Combine_networks.ipynb  01_PL_04a_Test_create_network().ipynb  01_PL_05_Test_tessellation.ipynb  01_PL_06_Project_network_Voronois.ipynb  01_PL_06_Project_network_voronois.ipynb  01_PL_06a_Project_network_Voronois [voronoi_polygons()].ipynb  01_PL_06a_Project_network_Voronois.ipynb  01_PL_06b_Project_network_Voronois [voronoi_points_within_aoi()].ipynb  01_PL_06b_Project_network_Voronois-versionb.ipynb  01_PL_06b_Project_network_Voronois.ipynb  01_PL_07_n_survey.ipynb  01_PL_08_Medellin_Statistics.ipynb  01_PL_09_Project_network_partitioning [WIP].ipynb  01_PL_09_Project_network_partitioning.ipynb  02_PV_01_Slope_DEM.ipynb  02_PV_01b_GDL_slope_to_edges [checked].ipynb  02_PV_01b_GDL_slope_to_edges.ipynb  02_PV_02_Population (voronoi_polygons()).ipynb  02_PV_02_Population.ipynb  02_PV_02a_Project_network_Voronois [voronoi_polygons()].ipynb  02_PV_02b_GDL_Population (voronoi_points_within_aoi()).ipynb  02_PV_02b_Population.ipynb  02_PV_03_Intersections.ipynb  02_PV_04_Vegetation.ipynb  (+11 more)
(+260 files in other folders)
