[tool.poetry]
name = "vref-walkability-index"
version = "0.1.0"
description = "Repository for the Walkability Index research funded by VREF for 2024 and developed by EAFIT and Tec de Monterrey."
authors = ["edgaregurrola <edgaregurrola@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
odc = "jupyterlab"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
odc = "^0.1.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
